finished casestudy qt

--- a/index.html
+++ b/index.html
@@ -18,22 +18,22 @@
             <nav>            
                 <ul id="primary-navigation" data-visible="false" class="primary-navigation flex">
                     <li>
-                        <a href="#offer-link">
+                        <a class="nav-item" href="#offer-link">
                             <p>ABOUT</p>
                         </a>
                     </li>
                     <li>
-                        <a href="#founder-link">
+                        <a class="nav-item" href="#founder-link">
                             <p>PORTFOLIO</p>
                         </a>
                     </li>
                     <li>
-                        <a href="#pricing-link">
+                        <a class="nav-item" href="#pricing-link">
                             <p>PRICING</p>
                         </a>
                     </li>
                     <li>
-                        <a href="#contact-link">
+                        <a class="nav-item" href="#contact-link">
                             <p>CONTACT</p>
                         </a>
                     </li>
@@ -185,16 +185,14 @@
                 </p>
             </div>
             <div class="logo-section">
-                <img src="images/logo-placeholder.png" alt="placeholder">
-                <img src="images/logo-placeholder.png" alt="placeholder">
-                <img src="images/logo-placeholder.png" alt="placeholder">
-                <img src="images/logo-placeholder.png" alt="placeholder">
-                <img src="images/logo-placeholder.png" alt="placeholder">
-                <img src="images/logo-placeholder.png" alt="placeholder">
-                <img src="images/logo-placeholder.png" alt="placeholder">
-                <img src="images/logo-placeholder.png" alt="placeholder">
-                <img src="images/logo-placeholder.png" alt="placeholder">
-                <img src="images/logo-placeholder.png" alt="placeholder">
+                <img src="images/Siemens.png" alt="placeholder">
+                <img src="images/Pandion.png" alt="placeholder">
+                <img src="images/Transitraeume.png" alt="placeholder">
+                <img src="images/aethos.png" alt="placeholder">
+                <img src="images/DeutscheBahn.png" alt="placeholder">
+                <img src="images/QTEventStudio.png" alt="placeholder">
+                <img src="images/BusinessHub.png" alt="placeholder">
+                <img src="images/StoneBrewing.png" alt="placeholder">
             </div>
 
             <hr></hr>
@@ -292,142 +290,170 @@
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
                             <div class="slider-card">
-                                <p>PROJECT TYPE</p>
+                                <p class="pricing-category">PROJECT TYPE</p>
                                 <p>Grafikdesign</p>
-                                <p>HOURS OF WORK</p>
-                                <p>3+</p>
-                                <p>DESCRIPTION</p>
-                                <td>Print & digital</td>
+                                <hr></hr>
+                                <p class="pricing-category">HOURS OF WORK</p>
+                                <p class="pricing-content">3+</p>
+                                <hr></hr>
+                                <p class="pricing-category">DESCRIPTION</p>
+                                <p class="pricing-content">Print & digital</td>
                             </div> 
                         </div>
                         <div class="swiper-slide">
                             <div class="slider-card">
-                                <p>PROJECT TYPE</p>
+                                <p class="pricing-category">PROJECT TYPE</p>
                                 <p>Kunst-Beratung</p>
-                                <p>HOURS OF WORK</p>
-                                <p>8+</p>
-                                <p>DESCRIPTION</p>
-                                <td>Kunst am Bau, Standortmarketing</td>
+                                <hr></hr>
+                                <p class="pricing-category">HOURS OF WORK</p>
+                                <p class="pricing-content">8+</p>
+                                <hr></hr>
+                                <p class="pricing-category">DESCRIPTION</p>
+                                <p class="pricing-content">Kunst am Bau, Standortmarketing</td>
                             </div> 
                         </div>
                         <div class="swiper-slide">
                             <div class="slider-card">
-                                <p>PROJECT TYPE</p>
+                                <p class="pricing-category">PROJECT TYPE</p>
                                 <p>F&B-Beratung</p>
-                                <p>HOURS OF WORK</p>
-                                <p>12+</p>
-                                <p>DESCRIPTION</p>
-                                <td>Lobbying, Networking, Krisen-PR</td>
+                                <hr></hr>
+                                <p class="pricing-category">HOURS OF WORK</p>
+                                <p class="pricing-content">12+</p>
+                                <hr></hr>
+                                <p class="pricing-category">DESCRIPTION</p>
+                                <p class="pricing-content">Lobbying, Networking, Krisen-PR</td>
                             </div> 
                         </div>
                         <div class="swiper-slide">
                             <div class="slider-card">
-                                <p>PROJECT TYPE</p>
+                                <p class="pricing-category">PROJECT TYPE</p>
                                 <p>PR-Beratung</p>
-                                <p>HOURS OF WORK</p>
-                                <p>16+</p>
-                                <p>DESCRIPTION</p>
-                                <td>Lobbying, Networking, Krisen-PR</td>
+                                <hr></hr>
+                                <p class="pricing-category">HOURS OF WORK</p>
+                                <p class="pricing-content">16+</p>
+                                <hr></hr>
+                                <p class="pricing-category">DESCRIPTION</p>
+                                <p class="pricing-content">Lobbying, Networking, Krisen-PR</td>
                             </div> 
                         </div>
                         <div class="swiper-slide">
                             <div class="slider-card">
-                                <p>PROJECT TYPE</p>
+                                <p class="pricing-category">PROJECT TYPE</p>
                                 <p>Social Media-Analyse</p>
-                                <p>HOURS OF WORK</p>
-                                <p>24+</p>
-                                <p>DESCRIPTION</p>
-                                <td>Account-, Reichweiten- & Engagement-Analysen</td>
+                                <hr></hr>
+                                <p class="pricing-category">HOURS OF WORK</p>
+                                <p class="pricing-content">24+</p>
+                                <hr></hr>
+                                <p class="pricing-category">DESCRIPTION</p>
+                                <p class="pricing-content">Account-, Reichweiten- & Engagement-Analysen</td>
                             </div> 
                         </div>
                         <div class="swiper-slide">
                             <div class="slider-card">
-                                <p>PROJECT TYPE</p>
+                                <p class="pricing-category">PROJECT TYPE</p>
                                 <p>Einladungsmanagement</p>
-                                <p>HOURS OF WORK</p>
-                                <p>24+</p>
-                                <p>DESCRIPTION</p>
-                                <td>Mailing, Monitoring & Reporting. </td>
+                                <hr></hr>
+                                <p class="pricing-category">HOURS OF WORK</p>
+                                <p class="pricing-content">24+</p>
+                                <hr></hr>
+                                <p class="pricing-category">DESCRIPTION</p>
+                                <p class="pricing-content">Mailing, Monitoring & Reporting. </td>
                             </div> 
                         </div>
                         <div class="swiper-slide">
                             <div class="slider-card">
-                                <p>PROJECT TYPE</p>
+                                <p class="pricing-category">PROJECT TYPE</p>
                                 <p>Zielgruppen-Analyse</p>
-                                <p>HOURS OF WORK</p>
-                                <p>40+</p>
-                                <p>DESCRIPTION</p>
-                                <td>Community Research, Social Media-Analyse</td>
+                                <hr></hr>
+                                <p class="pricing-category">HOURS OF WORK</p>
+                                <p class="pricing-content">40+</p>
+                                <hr></hr>
+                                <p class="pricing-category">DESCRIPTION</p>
+                                <p class="pricing-content">Community Research, Social Media-Analyse</td>
                             </div> 
                         </div>
                         <div class="swiper-slide">
                             <div class="slider-card">
-                                <p>PROJECT TYPE</p>
+                                <p class="pricing-category">PROJECT TYPE</p>
                                 <p>Konzeption</p>
-                                <p>HOURS OF WORK</p>
-                                <p>90+</p>
-                                <p>DESCRIPTION</p>
-                                <td>Setzung von Themenschwerpunkten. Ausarbeitung von Redaktionsplänen</td>
+                                <hr></hr>
+                                <p class="pricing-category">HOURS OF WORK</p>
+                                <p class="pricing-content">90+</p>
+                                <hr></hr>
+                                <p class="pricing-category">DESCRIPTION</p>
+                                <p class="pricing-content">Setzung von Themenschwerpunkten. Ausarbeitung von Redaktionsplänen</td>
                             </div> 
                         </div>
                         <div class="swiper-slide">
                             <div class="slider-card">
-                                <p>PROJECT TYPE</p>
+                                <p class="pricing-category">PROJECT TYPE</p>
                                 <p>Event Management</p>
-                                <p>HOURS OF WORK</p>
-                                <p>120+</p>
-                                <p>DESCRIPTION</p>
-                                <td>Wir schaffen erlebbare Kommunikation</td>
+                                <hr></hr>
+                                <p class="pricing-category">HOURS OF WORK</p>
+                                <p class="pricing-content">120+</p>
+                                <hr></hr>
+                                <p class="pricing-category">DESCRIPTION</p>
+                                <p class="pricing-content">Wir schaffen erlebbare Kommunikation</td>
                             </div> 
                         </div>
                         <div class="swiper-slide">
                             <div class="slider-card">
-                                <p>PROJECT TYPE</p>
+                                <p class="pricing-category">PROJECT TYPE</p>
                                 <p>Strategie</p>
-                                <p>HOURS OF WORK</p>
-                                <p>160+</p>
-                                <p>DESCRIPTION</p>
-                                <td>Strategischer Aufbau der Kommunikation für kurz-, mittel- & langfristige Ziele</td>
+                                <hr></hr>
+                                <p class="pricing-category">HOURS OF WORK</p>
+                                <p class="pricing-content">160+</p>
+                                <hr></hr>
+                                <p class="pricing-category">DESCRIPTION</p>
+                                <p class="pricing-content">Strategischer Aufbau der Kommunikation für kurz-, mittel- & langfristige Ziele</td>
                             </div> 
                         </div>
                         <div class="swiper-slide">
                             <div class="slider-card">
-                                <p>PROJECT TYPE</p>
+                                <p class="pricing-category">PROJECT TYPE</p>
                                 <p>Rebranding</p>
-                                <p>HOURS OF WORK</p>
-                                <p>250+</p>
-                                <p>DESCRIPTION</p>
-                                <td>Neudefinition des Brands. Strategie & Konzepte von Kampagnen, Redaktionspläne</td>
+                                <hr></hr>
+                                <p class="pricing-category">HOURS OF WORK</p>
+                                <p class="pricing-content">250+</p>
+                                <hr></hr>
+                                <p class="pricing-category">DESCRIPTION</p>
+                                <p class="pricing-content">Neudefinition des Brands. Strategie & Konzepte von Kampagnen, Redaktionspläne</td>
                             </div> 
                         </div>
                         <div class="swiper-slide">
                             <div class="slider-card">
-                                <p>PROJECT TYPE</p>
+                                <p class="pricing-category">PROJECT TYPE</p>
                                 <p>Brand Creation</p>
-                                <p>HOURS OF WORK</p>
-                                <p>300+</p>
-                                <p>DESCRIPTION</p>
-                                <td>Brand Book, Strategie & Konzepte von Kampagnen, Redaktionspläne</td>
+                                <hr></hr>
+                                <p class="pricing-category">HOURS OF WORK</p>
+                                <p class="pricing-content">300+</p>
+                                <hr></hr>
+                                <p class="pricing-category">DESCRIPTION</p>
+                                <p class="pricing-content">Brand Book, Strategie & Konzepte von Kampagnen, Redaktionspläne</td>
                             </div> 
                         </div>
                         <div class="swiper-slide">
                             <div class="slider-card">
-                                <p>PROJECT TYPE</p>
+                                <p class="pricing-category">PROJECT TYPE</p>
                                 <p>Social Media-Betreuung</p>
-                                <p>HOURS OF WORK</p>
-                                <p>25+ Std. / Monat</p>
-                                <p>DESCRIPTION</p>
-                                <td>Redaktionspläne für alle Accounts, Umsetzung, Monitoring & Reporting</td>
+                                <hr></hr>
+                                <p class="pricing-category">HOURS OF WORK</p>
+                                <p class="pricing-content">25+ Std. / Monat</p>
+                                <hr></hr>
+                                <p class="pricing-category">DESCRIPTION</p>
+                                <p class="pricing-content">Redaktionspläne für alle Accounts, Umsetzung, Monitoring & Reporting</td>
                             </div> 
                         </div>
                         <div class="swiper-slide">
                             <div class="slider-card">
-                                <p>PROJECT TYPE</p>
+                                <p class="pricing-category">PROJECT TYPE</p>
                                 <p>Brand Management</p>
-                                <p>HOURS OF WORK</p>
-                                <p>35+ Std. / Monat</p>
-                                <p>DESCRIPTION</p>
-                                <td>Alle obigen Leistungen ab einer Laufzeit von 1 Jahr</td>
+                                <hr></hr>
+                                <p class="pricing-category">HOURS OF WORK</p>
+                                <p class="pricing-content">35+ Std. / Monat</p>
+                                <hr></hr>
+                                <p class="pricing-category">DESCRIPTION</p>
+                                <p class="pricing-content">Alle obigen Leistungen ab einer Laufzeit von 1 Jahr</td>
                             </div> 
                         </div>
                     </div>
