added new casestudies and changed responsiveness

--- a/casestudy_pandion.html
+++ b/casestudy_pandion.html
@@ -12,6 +12,7 @@
     <body>
         <header class="primary-header flex">
             <a href="index.html"><p id="logo">NO UNICORN (YET)</p></a>
+
             <button class="mobile-nav-toggle" aria-controls="primary-navigation" aria-expanded="false"><span class="sr-only"></span></button>
 
             <nav>            
@@ -42,10 +43,10 @@
 
         <div class="hero-section">
             <div class="page-wrapper">
-                <h2 class="margintop">QT/eventstudio</h2>
-                <h2>#QTfulEventsOnly</h2>
+                <h2 class="margintop">Pandion</h2>
+                <h2>”Himmel Unter Berlin” - Einladungsmanagement</h2>
             </div>
-            <img class="margintop screenpicture" src="./images/cs_qteventstudio/QTeventstudio_2.png" alt="plakat qt/eventstudio">
+            <img class="margintop screenpicture" src="./images/cs_pandion/Himmel unter Berlin 1.png" alt="plakat qt/eventstudio">
         </div>
 
         <div class="page-wrapper">
@@ -54,15 +55,15 @@
                     <h2 class="challenge-header margintop">DIE CHALLENGE</h2>
                 </div>
                 <div class="challenge-right-side">
-                    <p class="margintop">QT/eventstudio ist seit 2005 eine der führenden Eventagenturen in Berlin.Die Agentur agiert europaweit im MICE Segment (Meetings, Incentives, Conventions & Events) für das Inbound-Outbound Geschäft.Die Corona-Pandemie hat die Agentur dazu gezwungen, sich neu zu erfinden. Eine Aufgabe, die das Team rund um die Geschäftsführerin Fulvia Pieroni bravorös gemeistert hat, indem sie ihrem Leistungsangebot ein eigenes Digital Studio sowie ein hauseigenes Bistro & Deli hinzugefügt hat. All das unter dem Leitmotiv, “Connectivity und Miteinander neu und modern zu denken!”Dafür haben wir von No Unicorn (Yet) eine auf ein Jahr angelegte und durch 4 Kampagnen kommunizierte Strategie erstellt.</p>
-                    <h4 class="margintop">Brand Book</h4>
+                    <p class="margintop">Ein Einladungsmanagement, bei dem die Einladungen nicht via Weiterleitung in Umlauf kommen können und einzig die geladenen Gäste Zugang erhalten.</p>
+                    <h4 class="margintop">Grafikdesign der Einladungen</h4>
                     <hr></hr>
-                    <h4 class="margintop">Strategie</h4>
+                    <h4 class="margintop">Erstellung von automatisierten, individuellen QR-Codes gemäß der Gästeliste</h4>
                     <hr></hr>
-                    <h4 class="margintop">Konzeption</h4>
+                    <h4 class="margintop">Verschiebung des Grafikdesigns bei Weiterleitung um nicht direkt eingeladene Gäste kenntlich zu machen</h4>
                 
                     <hr></hr>
-                    <h4 class="margintop">Social Media</h4>
+                    <h4 class="margintop">Mailing & Betreuung über den gesamten Zeitraums des Events</h4>
                     <hr></hr>
                 </div>
             </div>
@@ -73,55 +74,37 @@
                     <h2 class="margintop">DER PROZESS</h2>
                 </div>
                 <div class="process-right-side">
-                    <p class="margintop">Zuerst haben wir in einem 59-Seiten umfassenden Brand Book die bereits etablierte Marke neu interpretiert und durch eine konsistente Struktur neu aufgestellt - denn: Consistency is key!
-                    <br><br>
-                    Anhand des Brand Books haben wir eine langfristige Strategie erstellt, bei der die thematischen Kernthemen der Agentur logisch und nachvollziehbar aufeinander aufbauen, denn: Transparency is key!
-                    <br><br>    
-                    Diese strategischen Themensetzungen haben wir dann in vier unterschiedliche Kampagnen übersetzt und redaktionell strukturiert, denn: Continuity is key!</p>
+                    <p class="margintop">Durch moderne Software ist es uns möglich, individualisierte QR-Codes automatisch zu generieren, wobei jeder QR-Code eine spezifischen Emailadresse auf der Gästeliste zugeordnet wird. Um eine zusätzliche Absicherung für den Kunden zu schaffen, haben wir das Grafikdesign so angelegt, dass es sichim Falle einer Weiterleitung offensichtlich verschiebt und damit offenbart, keine offizielle Einladung zu sein</p>
                 </div>
             </div>
             <div class="swiper qtProcessSlider margintop">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
                         <div class="slider-card">
-                            <img src="./images/cs_qteventstudio/qt_cc_1.png" alt="process one">
+                            <img src="./images/cs_pandion/HUB_visual_003-1080x675 1.png" alt="process one">
                         </div> 
                     </div>
                     <div class="swiper-slide">
                         <div class="slider-card">
-                            <img src="./images/cs_qteventstudio/qt_cc_2.png" alt="process two">
+                            <img src="./images/cs_pandion/himmelunterberlin-insideout-by-florafaunavisions 1.png"
+                             alt="process two">
                         </div> 
                     </div>
                     <div class="swiper-slide">
                         <div class="slider-card">
-                            <img src="./images/cs_qteventstudio/qt_cc_3.png" alt="process three">
-                        </div> 
-                    </div>
-                    <div class="swiper-slide">
-                        <div class="slider-card">
-                            <img src="./images/cs_qteventstudio/qt_cc_4.png" alt="process four">
-                        </div> 
-                    </div>
-                    <div class="swiper-slide">
-                        <div class="slider-card">
-                            <img src="./images/cs_qteventstudio/qt_cc_5.png" alt="process five">
-                        </div> 
-                    </div>
-                    <div class="swiper-slide">
-                        <div class="slider-card">
-                            <img src="./images/cs_qteventstudio/qt_cc_6.png" alt="process six">
+                            <img src="./images/cs_pandion/size=708x398 1.png"  alt="process three">
                         </div> 
                     </div>
                 </div>
                 <div class="swiper-pagination"></div>
             </div>
             <div class="page-wrapper">
-                <p class="test-text margintop">Basierend auf dem abgestimmten Brand Book, der daraus folgendsen   Strategie und den auf ihr basierenden 4 Kampagnen haben wir dann entsprechende Templates für alle digitalen Medien & Drucksorten erstellt, wie oben anhand der Bilder zum ‘Grid’ zu sehen.   
+                <p class="test-text margintop">Da das Projekt in einer ‘Secret-Location’ stattgefunden hat, mussten wir die Einladungen auf drei Mailings aufsplitten: Allgemeine Einladung, Bestätigung und Bekanntgabe der Location. Die eingeladenen Gäste konnten sich direkt in der Mail und ohne Umweg einer Landing Page für das Event einladen und erhielten bei Bestätigung einen automatisierten Kalendereintrag auf ihren unterschiedlichen Devices.   
                 </p>
             </div>
-            <img class="metroboard margintop screenpicture" src="./images/cs_qteventstudio/QTeventstudio_1.png" alt="metroboard">
+            <img class="metroboard margintop screenpicture" src="./images/cs_pandion/StefanReiss_OT1083_Totale1 1.png" alt="metroboard">
             <div class="page-wrapper">
-                <p class="margintop">“Weil die Kundin sowohl socializing als auch business-based Content in einem Brand kommunizieren wollte, mussten wir einerseits genügend Raum für das ‘Lebensgefühl hinter QT/’, andererseits aber auch den faktisch wirtschaftlichen Mehrwert des Unternehmens in ein und derselben Außendarstellung manifestieren. Unser Slogan “QTful Events Only” deckt beide dieser Seiten ab. Er steht sowohl für professionelles Eventmanagement, als auch für einzigartige Erlebnisse, die wir mit den Events persönlich verbinden.”
+                <p class="margintop">“Wer eine professionelle, unkomplizierte und rasche Umsetzung des Einladungsmanagements für seine Veranstaltungen benötigt und außerdem erwartet, dass kurzfristige Ergänzungen immer möglich sind, ist beim NoUnicornYet-Team an der richtigen Adresse. Regelmäßige Updates und ein zuverlässiges Feedback runden das Gesamtpaket ab! Wir waren sehr zufrieden und freuen uns auf die weitere Zusammenarbeit.”
                 </p>
             </div>
         </div>
@@ -132,36 +115,28 @@
                     <h2 class="margintop">DAS ERGEBNIS</h2>
                 </div>
                 <div class="result-right-side">
-                    <p class="margintop">Wir haben einem existierenden Brand neuen Schwung in Richtung ‘sozializing & business-related’ gegeben. Diese Art der Unternehmenskommunikation deckt sowohl den vertrieblichen, als auch den gesellschaftlichen Mehrwert des Unternehmens ab und sollte in jeder modernen Kommunikation beinhaltet sein. Durch eine konsistente, kontinuierliche und vor allem nahbare kommunikative Basis haben wir QT/eventstudio das notwendige Fundament für eine nachhaltige und effizientere Kundenbindung geschaffen, die wir nun durch unsere Umsetzung strategisch begleiten und dauerhaft überwachen.
+                    <p class="margintop">Jede*r der geladenen Gäste erhielt einen individualisierten QR-Code, der am Eingang zur Ausstellung durch unser Team via App abgescannt und registriert wurde.
+                    QR-Codes, die bereits abgescannt wurden, wurden von der App erkannt.
+                        
                     </p>
                 </div>
             </div>
-            <img class="margintop screenpicture" src="./images/cs_qteventstudio/QTeventstudio_socialmedia_lifeisqtful 1.png" alt="lifeisqtful">
+            <img class="margintop screenpicture" src="./images/cs_pandion/Bildschirmfoto 2022-04-10 um 19.59 2.png" alt="lifeisqtful">
             <div class="swiper qtProcessSlider margintop">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
                         <div class="slider-card">
-                            <img src="./images/cs_qteventstudio/220324_QT__instagram_story_1 1.png" alt="process one">
+                            <img src="./images/cs_pandion/Bildschirmfoto 2022-04-10 um 20.00 1.png" alt="process one">
                         </div> 
                     </div>
                     <div class="swiper-slide">
                         <div class="slider-card">
-                            <img src="./images/cs_qteventstudio/220325_QT_instagram_story_1 1.png" alt="process two">
+                            <img src="./images/cs_pandion/Bildschirmfoto 2022-04-10 um 20.00 2.png" alt="process two">
                         </div> 
                     </div>
                     <div class="swiper-slide">
                         <div class="slider-card">
-                            <img src="./images/cs_qteventstudio/kw12_220325_qt_instagram_post_3 1.png" alt="process three">
-                        </div> 
-                    </div>
-                    <div class="swiper-slide">
-                        <div class="slider-card">
-                            <img src="./images/cs_qteventstudio/kw12_220322_qt_insta_post_1 1.png" alt="process four">
-                        </div> 
-                    </div>
-                    <div class="swiper-slide">
-                        <div class="slider-card">
-                            <img class="screenpicture" src="./images/cs_qteventstudio/KW14_220404_QT_Facebook_post 1.png" alt="process five">
+                            <img src="./images/cs_pandion/Bildschirmfoto 2022-04-10 um 20.00 3.png" alt="process three">
                         </div> 
                     </div>
                 </div>
